--- a/home.html
+++ b/home.html
@@ -48,9 +48,8 @@
 		</div>
 		<div id="links" class="row">
 			<a href="help.html"><img src="Images/want-to-help.webp"></a>
-			<a href="#"><img src="Images/transport.webp"></a>
-			<a href="#"><img src="Images/tips-for-marchers.webp"></a>
-			<a href="#"><img src="Images/sign-ideas.webp"></a>
+			<a href="tips.html"><img src="Images/tips-for-marchers.webp"></a>
+			<a href="signs.html"><img src="Images/sign-ideas.webp"></a>
 		</div>
 	</div>
 	<div id="gradient" class="row">
