--- a/tips.html
+++ b/tips.html
@@ -11,7 +11,9 @@
 		<a href="signs.html">Sign Ideas</a>
 		<a href="help.help">Get help</a>
 	</nav>
-	<div id="resources">
+		<div id="resources">
+
+		</div>
 	</div>
 	<footer>
 		<div class="row">
