Un delete help page

--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
 		</div>
 		<div>
 			<h4>36</h4>
-			<p>foetuses</p>
+			<p>is less than 37</p>
 		</div>
 		<div>
 			<h4>It would be</h4>
@@ -76,7 +76,7 @@
 			<h4 id="seconds">1</h4><p id="seconds-text">Seconds</p>
 		</div>
 		<p style="padding-bottom: 20px">until</p>
-		<h4 id="event">March for autonomy</h4>
+		<h4 id="event">March for Choice</h4>
 	</div>
 	<script>
 	// Set the date we're counting down to
@@ -114,12 +114,12 @@
 		<div class="row">
 			<div>
 				<h5>About the march</h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices vitae auctor eu augue ut lectus.
-				</p>
+				<p>The right to an abortion was not a right that was just given. People had to spend years campaigning for the freedoms we now enjoy. However there are still people who seek to control the bodies of others.  </p>
 			</div>
 			<div>
 				<h5>Get Help</h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices vitae auctor eu augue ut lectus.
+				<p>If you or someone you know is unexpectedly pregnant you have options. On our <a style="color: #fff" href="help.html">help page</a> we have answers to many of the questions and fears you may have. You are not alone
+				</p>
 			</div>
 			<div>
 				<h5>Watch</h5>
