--- a/home.html
+++ b/home.html
@@ -6,16 +6,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;0,800;1,400&family=Montserrat:wght@500;900&display=swap" rel="stylesheet"> 
 </head>
 <body>
+	<a id="logo" href="home.html"><img src="images/Logo.jpg"></a>
 	<nav>
-		<a href="tips.html">Tips</a>
 		<a href="signs.html">Sign Ideas</a>
 		<a href="help.html">Get help</a>
 	</nav>
 	<div id="banner">
-		<img src="Images/temp.bmp">
+		<img src="Images/Banner.jpg">
 		<div id="text">
 			<h1><i>Stand up for freedom</i></h1>
-			<h1>Protests!</h1>
+			<h1>Protect your rights!</h1>
 		</div>
 	</div>
 	<div id="column">
@@ -42,13 +42,12 @@
 				<ul>
 					<li>Make a plan to be in Wellington for the march on 3 December.</li>
 					<li>Spread the word and invite all your family, friends, and colleagues to participate!</li>
-					<li>More!</li>
+					<li>Learn more about the history of abortion</li>
 				</ul>
 			</div>
 		</div>
 		<div id="links" class="row">
 			<a href="help.html"><img src="Images/want-to-help.webp"></a>
-			<a href="tips.html"><img src="Images/tips-for-marchers.webp"></a>
 			<a href="signs.html"><img src="Images/sign-ideas.webp"></a>
 		</div>
 	</div>
