--- a/signs.html
+++ b/signs.html
@@ -7,22 +7,25 @@
 </head>
 <body>
 	<nav>
-		<a href="tips.html">Tips</a>
+		<a style="float:left; padding:45px" href="home.html"><img src="images/Logo.jpg"></a>
 		<a href="signs.html">Sign Ideas</a>
-		<a href="help.help">Get help</a>
+		<a href="help.html">Get help</a>
 	</nav>
-	<div id="resources">
+	<div id="signs">
+		<img src="images/poster.bmp">
+		<img src="images/Painting.jpg">
+		<img src="images/Flyers.jpg">
 	</div>
 	<footer>
 		<div class="row">
 			<div>
 				<h5>About the march</h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices vitae auctor eu augue ut lectus.
-				</p>
+				<p>The right to an abortion was not a right that was just given. People spent years campaigning for the freedoms we now enjoy. However there are still people who seek to control the bodies of others.</p>
 			</div>
 			<div>
 				<h5>Get Help</h5>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ultrices vitae auctor eu augue ut lectus.
+				<p>If you or someone you know is unexpectedly pregnant you have options. On our <a style="color: #fff" href="help.html">help page</a> we have answers to many of the questions and fears you may have. You are not alone
+				</p>
 			</div>
 			<div>
 				<h5>Watch</h5>
