--- a/signs.html
+++ b/signs.html
@@ -6,8 +6,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;0,800;1,400&family=Montserrat:wght@500;700;900&display=swap" rel="stylesheet"> 
 </head>
 <body>
+	<a id="logo" href="index.html"><img src="Images/Logo.jpg"></a>
 	<nav>
-		<a style="float:left; padding:45px" href="home.html"><img src="images/Logo.jpg"></a>
 		<a href="signs.html">Sign Ideas</a>
 		<a href="help.html">Get help</a>
 	</nav>
@@ -29,7 +29,7 @@
 			</div>
 			<div>
 				<h5>Watch</h5>
-				<iframe width="320" height="180" src="https://www.youtube.com/embed/Efr_0_GEL-I" title="Crapshots Ep448 - The Cosmic Slam" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="320" height="180" src="https://www.youtube.com/embed/1O_YHxd_HWQ?list=TLPQMjIxMTIwMjKpyl_AVBzPZw" title="How abortion bans make inequality worse" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</footer>
