Update and rename home.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,600;0,800;1,400&family=Montserrat:wght@500;900&display=swap" rel="stylesheet"> 
 </head>
 <body>
-	<a id="logo" href="home.html"><img src="images/Logo.jpg"></a>
+	<a id="logo" href="index.html"><img src="Images/Logo.jpg"></a>
 	<nav>
 		<a href="signs.html">Sign Ideas</a>
 		<a href="help.html">Get help</a>
@@ -20,7 +20,7 @@
 	</div>
 	<div id="column">
 		<div id="video" class="row">
-			<iframe width="625" height="345" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Rick Astley - Never Gonna Give You Up (Official Music Video)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="645" height="315" src="https://www.youtube.com/embed/TdFz6FiZ2bs" title="#MyBodyIsMyOwn: What is Bodily Autonomy?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<div class="text">
 				<h2>Stand for Freedom</h2>
 				<p>Gather at Aro Park at 12:30pm.<br>
@@ -122,7 +122,7 @@
 			</div>
 			<div>
 				<h5>Watch</h5>
-				<iframe width="320" height="180" src="https://www.youtube.com/embed/Efr_0_GEL-I" title="Crapshots Ep448 - The Cosmic Slam" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="320" height="180" src="https://www.youtube.com/embed/1O_YHxd_HWQ?list=TLPQMjIxMTIwMjKpyl_AVBzPZw" title="How abortion bans make inequality worse" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</footer>
