--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 		<div></div>
 		<div>
 			<h4>13,246</h4>
-			<p>Mother's lives saved in 2020</p>
+			<p>lives saved in 2020</p>
 		</div>
 		<div>
-			<h4>36</h4>
-			<p>is less than 37</p>
+			<h4>25%</h4>
+			<p>Of women have an abortion before 45</p>
 		</div>
 		<div>
-			<h4>It would be</h4>
-			<p>very disingenuous to say abortion is murder</p>
+			<h4>91%</h4>
+			<p>happen in the first 12 weeks</p>
 		</div>
 		<div></div>
 	</div>
@@ -122,7 +122,7 @@
 			</div>
 			<div>
 				<h5>Watch</h5>
-				<iframe width="320" height="180" src="https://www.youtube.com/embed/1O_YHxd_HWQ?list=TLPQMjIxMTIwMjKpyl_AVBzPZw" title="How abortion bans make inequality worse" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
+				<iframe width="320" height="180" src="https://www.youtube.com/embed/TdFz6FiZ2bs" title="#MyBodyIsMyOwn: What is Bodily Autonomy" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</footer>
